--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-:root {
+ :root {
   --primary-color: #a855f7;
   --primary-color-dark: #9333ea;
   --secondary-color: #ca8a04;
@@ -6,12 +6,22 @@
   --text-light: #6b7280;
   --extra-light: #faf5ff;
   --max-width: 1200px;
+} 
+
+.dark-theme {
+  --primary-color:#000106;
+  --secondary-color:#fff; 
 }
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+#logo {
+  height: 40px;
+  cursor: pointer;
 }
 
 a {
@@ -23,11 +33,12 @@ body {
 }
 
 nav {
+  height: 20px;
   width: 100%;
   position: fixed;
   top: 0;
   left: 0;
-  background-color: #ffffff;
+  background-color: #ffffff; 
   z-index: 99;
 }
 
@@ -95,6 +106,16 @@ ul li a:hover {
   border-top-color: var(--secondary-color);
   border-bottom-color: var(--secondary-color);
   color: var(--secondary-color);
+}
+
+#icon {
+  width: 30px;
+  cursor: pointer;
+}
+
+:root {
+  --primary-color: #000106
+  --secondary-color: #fff
 }
 
 .section {
@@ -184,11 +205,13 @@ i{
 .image {
   display: grid;
   place-items: center;
+   /* height: 50px;  */
 }
 
 .image img {
   width: min(25rem, 90%);
   border-radius: 100%;
+  height: 70%;
 }
 
 @media (width < 750px) {
